use JavaFX WebView in product system pages and ...
location results

--- a/olca-app-html/src/product_system_statistics.html
+++ b/olca-app-html/src/product_system_statistics.html
@@ -109,18 +109,18 @@
 			$scope.statistics = {};
 			
 			$scope.callOpenProcess = function(process) {
-				if(typeof(openProcess) !== 'undefined') {
-					openProcess(angular.toJson(process));
-				} else {
-					console.log('openProcess is not a registered function');
+				try {
+					java.openProcess(angular.toJson(process));
+				} catch (e) {
+					alert(e);
 				}
 			};
 			
 			$scope.callRecalculate = function() {
-				if(typeof(recalculate) !== 'undefined') {
-					recalculate();
-				} else {
-					console.log('recalculate is not a registered function');
+				try {
+					java.recalculate();
+				} catch (e) {
+					alert(e);
 				}
 			};
 		};
