--- a/olca-app-html/src/kml_editor/kml_editor.html
+++ b/olca-app-html/src/kml_editor/kml_editor.html
@@ -4,28 +4,25 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="lib/normalize.css">
-    <link rel="stylesheet" href="lib/milligram.min.css">
     <link rel="stylesheet" href="lib/codemirror.css">
+    <link rel="stylesheet" href="lib/ol.css">
     <style>
-        button {
-            margin: 5px;
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
         }
 
-        .button-blue {
-            background-color: #0d47a1;
-            border-color: #0d47a1;
-        }
-
-        .button-blue.button-clear,
-        .button-blue.button-outline {
-            background-color: transparent;
-            color: #0d47a1;
+        #react-root {
+            height: 100%;
         }
 
         .CodeMirror {
             border: 1px solid #eee;
             font-size: 1.3em;
+            height: 99%;
         }
 
         .CodeMirror-scroll {
