--- a/olca-app-html/src/kml_editor/kml_editor.html
+++ b/olca-app-html/src/kml_editor/kml_editor.html
@@ -4,6 +4,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=11">
     <link rel="stylesheet" href="lib/codemirror.css">
     <link rel="stylesheet" href="lib/ol.css">
     <style>
@@ -35,6 +36,14 @@
 
 <body>
     <div id="react-root"></div>
+    <script>
+        // fix the mouse pointer issue in an embedded IE
+        // see https://stackoverflow.com/a/37055626/599575
+        if (navigator && navigator.platform && navigator.platform.indexOf("Win") === 0) {
+            delete window.PointerEvent;
+            window.navigator.msPointerEnabled = false;
+        }
+    </script>
     <script src="lib/codemirror.js"></script>
     <script src="lib/xml.js"></script>
     <script src="lib/react.js"></script>
