Set Python editor theme based on system theme.

--- a/olca-app-html/src/python.html
+++ b/olca-app-html/src/python.html
@@ -36,7 +36,8 @@
 
         var codeMirror = CodeMirror(document.body, {
             mode: "python",
-            lineNumbers: true
+            lineNumbers: true,
+            theme: "idea"
         });
 
         codeMirror.on("change", function () {
