edge browser: better support for Ctrl+c

--- a/olca-app-html/src/python.html
+++ b/olca-app-html/src/python.html
@@ -37,7 +37,14 @@
 
         var codeMirror = CodeMirror(document.body, {
             mode: "python",
-            lineNumbers: true
+            lineNumbers: true,
+            extraKeys: {
+                "Ctrl-S": function() {
+                    if (window._onSave) {
+                        window._onSave();
+                    }
+                }
+            }
         });
 
         codeMirror.on("change", function () {
