Corrected model link attribute

--- a/olca-app-html/src/comments.html
+++ b/olca-app-html/src/comments.html
@@ -70,7 +70,7 @@
                 wrote on <span class="date"></span><span class="dataset-info"></span>
             </small>
         </span>
-        <div id="dataset-details" style="display:none">
+        <div class="dataset-details" style="display:none">
             <img class="dataset-icon">
             <a class="dataset-link" href="#"></a>
         </div>
