--- a/olca-app-html/src/home/home.html
+++ b/olca-app-html/src/home/home.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+        <link rel="stylesheet" type="text/css" href="home.css" />
+    </head>
 
-<head>
-    <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="home.css">
-</head>
-
-<body>
-    <div id="react-root"></div>
-    <script src="lib/react.js"></script>
-    <script src="lib/react-dom.js"></script>
-    <script src="home.js"></script>
-</body>
-
+    <body>
+        <div id="react-root"></div>
+        <script src="lib/react.js"></script>
+        <script src="lib/react-dom.js"></script>
+        <script src="home.js"></script>
+    </body>
 </html>
