minor fix to center the content

--- a/olca-app-build/credits/about_template.html
+++ b/olca-app-build/credits/about_template.html
@@ -6,7 +6,7 @@
     <title>About openLCA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <style>html,body{width: 100%;margin: 0;padding: 0;} html{position: relative;min-height: 100%;} .container{max-width: 700px;margin: 0;padding: 0;} .heading{font-size: 28px;text-align: center;margin: 15px;} .block-container{margin: auto;width: 70%;display: flex;flex-direction: column;} .inner-block-container{width: 100%;margin-bottom: 10px;} .block{width: 100%;display: flex;flex-direction: row;justify-content: space-between;background-color: #d7d7d7;border-radius: 5px;font-size: 12px;} .pointer{cursor: pointer;} .links-blk{display: flex;flex-direction: row;} .licence-details{padding: 2px 8px;font-size: 10px;} .mr-pd{padding: 5px;} .hide{display: none;}</style>
+  <style>html,body{width: 100%;margin: 0;padding: 0;} html{position: relative;min-height: 100%;} .container{max-width: 700px;margin: 0 auto;padding: 0;} .heading{font-size: 28px;text-align: center;margin: 15px;} .block-container{margin: auto;width: 70%;display: flex;flex-direction: column;} .inner-block-container{width: 100%;margin-bottom: 10px;} .block{width: 100%;display: flex;flex-direction: row;justify-content: space-between;background-color: #d7d7d7;border-radius: 5px;font-size: 12px;} .pointer{cursor: pointer;} .links-blk{display: flex;flex-direction: row;} .licence-details{padding: 2px 8px;font-size: 10px;} .mr-pd{padding: 5px;} .hide{display: none;}</style>
   <body>
     <div class="container">
       <div class="heading"><span>Credits</span></div>
