--- a/olca-app-html/src/home/home2.html
+++ b/olca-app-html/src/home/home2.html
@@ -9,7 +9,21 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <main>
+    <div id="app"></div>
+  </main>
+  <footer>
+    <div class="container-fluid">
+      <div class="grid">
+        <div />
+        <div>
+          <a href="http://www.greendelta.com" class="gd-logo">
+            <img class="gd-logo" src="images/greendelta-logo.png" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="lib/react.js"></script>
   <script src="lib/react-dom.js"></script>
   <script src="home2.js"></script>
