solved link bindings

--- a/olca-app-html/src/home/home2.html
+++ b/olca-app-html/src/home/home2.html
@@ -17,7 +17,7 @@
       <div class="grid">
         <div />
         <div>
-          <a href="http://www.greendelta.com" class="gd-logo">
+          <a href="http://www.greendelta.com" class="gd-logo" onclick="_onClick(event);">
             <img class="gd-logo" src="images/greendelta-logo.png" />
           </a>
         </div>
